--- a/asset/style.css
+++ b/asset/style.css
@@ -3,6 +3,21 @@
     margin: 0;
 }
 
+header{
+    width: 100%;
+    height:100px;
+}
 nav{
+    display: flex;
     position: fixed;
+    width: 100%;
+}
+.CabezeraIcono{
+    display: flex;
+    justify-content: first baseline;
+}
+.BarraLateral{
+   display: flex;
+   justify-content:right;
+    
 }
